Makefile. Packaging. Signing. Simple re-org.

--- a/static/index.html
+++ b/static/index.html
@@ -69,7 +69,7 @@
       </form>
     </div>
   </div>
-  <script src="../menu.js"></script>
+  <script src="../app/menu.js"></script>
   <script id="message-template" type="text/x-handlebars-template">
     <div id="{{id}}" class="row">
       <blockquote class="{{#if isPapa}}blockquote{{else}}blockquote-reverse{{/if}}">
