--- a/static/index.html
+++ b/static/index.html
@@ -100,7 +100,7 @@
       };
     });
     var url = "https://papabob.herokuapp.com";
-    var url = "http://localhost:8080";
+    // var url = "http://localhost:8080";
     
     var source = $("#message-template").html();
     var message_template = Handlebars.compile(source);
